test/errors/reference-error.js
ReferenceError({
  name: "ReferenceError",
  message: "something went wrong",
  stack: "ReferenceError: something went wrong\n    at Object.<anonymous> (/home/hyurl/git/fron/test/errors/index.js:12:22)\n    at Module._compile (internal/modules/cjs/loader.js:759:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:770:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:555:12)\n    at Module.require (internal/modules/cjs/loader.js:666:19)\n    at require (internal/modules/cjs/helpers.js:16:16)\n    at Object.<anonymous> (/home/hyurl/git/fron/test/get-types.js:13:5)\n    at Module._compile (internal/modules/cjs/loader.js:759:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:770:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:555:12)\n    at Module.require (internal/modules/cjs/loader.js:666:19)\n    at require (internal/modules/cjs/helpers.js:16:16)\n    at /home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:250:27\n    at Array.forEach (<anonymous>)\n    at Mocha.loadFiles (/home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:247:14)\n    at Mocha.run (/home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:576:10)\n    at Object.<anonymous> (/home/hyurl/git/fron/node_modules/mocha/bin/_mocha:637:18)\n    at Module._compile (internal/modules/cjs/loader.js:759:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:770:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at Function.Module._load (internal/modules/cjs/loader.js:555:12)\n    at Function.Module.runMain (internal/modules/cjs/loader.js:822:10)\n    at internal/main/run_main_module.js:17:11"
})